Restructured placement for includes; added basic head to index.html

--- a/gulp-basic/src/html/index.html
+++ b/gulp-basic/src/html/index.html
@@ -13,16 +13,9 @@
 
 <body class="grid-underlay">
     <h1>Primary Header</h1>
-    <nav class="global">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Lorem</a></li>
-            <li><a href="#">Perspiciatis</a></li>
-            <li><a href="#">Laborum</a></li>
-            <li><a href="#">Vitae</a></li>
-            <li><a href="#">Deleniti</a></li>
-        </ul>
-    </nav>
+
+    @@include('../includes/header.html')
+
     <div class="main-content" role="main">
         <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ex, officia accusamus nulla reprehenderit laboriosam.</p>
         <h2>Secondary Header Level 2</h2>
