MAJOR UPDATE: Entirely revamped color system

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,16 +17,235 @@
     @@include('../includes/header.html')
 
     <div class="main-content" role="main">
-        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem ex, officia accusamus nulla reprehenderit laboriosam.</p>
-        <h2>Secondary Header Level 2</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis rem sunt, nemo mollitia fugiat provident! Quas, quam officia saepe iusto.</p>
-        <div class="color-chips">    	
-	        <div class="color primary">Primary</div>
-	        <div class="color p-light">Primary Light</div>
-	        <div class="color p-dark">Primary Dark</div>
-	        <div class="color accent">Accent</div>
-	        <div class="color secondary">Secondary</div>
-	        <div class="color terciary">Terciary</div>
+        <p class="lead">The big style book for the Design System</p>
+        <h2>Color System</h2>
+        <p>Based on the selection of the $brand-primary color, all variations, tints, and shades are generated through SASS functions.</p>
+        <div class="test-comp-x">
+            Component Solid
+        </div>
+        <div class="test-comp-y">
+            Component Outline
+        </div>
+        <div class="color-chart">
+            <div class="shading">
+                <h3>Shading</h3>
+                <div class="color">
+                    <div class="swatch">1</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">2</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">3</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">4</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">5</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">G</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">6</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">7</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">8</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">9</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">10</div>
+                </div>
+            </div>
+            <div class="primary">
+                <h3>Primary</h3>
+                <div class="color">
+                    <div class="swatch">1</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">2</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">3</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">4</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">5</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">P</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">6</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">7</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">8</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">9</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">10</div>
+                </div>
+            </div>
+            <div class="accent">
+                <h3>Accent <small>(Complimentary)</small></h3>
+                <div class="color">
+                    <div class="swatch">1</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">2</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">3</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">4</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">5</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">A</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">6</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">7</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">8</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">9</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">10</div>
+                </div>
+            </div>
+            <div class="secondary">
+                <h3>Secondary</h3>
+                <div class="color">
+                    <div class="swatch">1</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">2</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">3</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">4</div>
+                </div>
+
+                <div class="color">
+                    <div class="swatch">5</div>
+                </div>
+
+                <div class="color">
+                    <div class="swatch">S</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">6</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">7</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">8</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">9</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">10</div>
+                </div>
+            </div>
+            <div class="tertiary">
+                <h3>Tertiary</h3>
+                <div class="color">
+                    <div class="swatch">1</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">2</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">3</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">4</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">5</div>
+                </div>
+
+                <div class="color">
+                    <div class="swatch">T</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">6</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">7</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">8</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">9</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">10</div>
+                </div>
+            </div>
+            <div class="quarternary">
+                <h3>Quarternary</h3>
+                <div class="color">
+                    <div class="swatch">1</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">2</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">3</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">4</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">5</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">Q</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">6</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">7</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">8</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">9</div>
+                </div>
+                <div class="color">
+                    <div class="swatch">10</div>
+                </div>
+            </div>
         </div>
         <h3>Header Level 3</h3>
         <p>Perspiciatis natus deserunt fugiat vel optio, reprehenderit, animi recusandae dolor placeat hic distinctio consequuntur voluptatem omnis ut earum unde excepturi.</p>
