--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,267 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description" content="Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quam sint temporibus asperiores est, tempore?">
-    <title>PROJECT NAME</title>
+    <title>Welcome to the Workflow API</title>
     <link rel="stylesheet" href="css/styles@@if (compression === true) {@@include('compression.html')}.css">
 </head>
 
-<body class="grid-underlay">
-    <h1>Primary Header</h1>
-
+<body class="grid-underla">
+    <h1>Design Workflow</h1>
     @@include('header.html')
-
     <div class="main-content" role="main">
-        <p class="lead">The big style book for the Design System</p>
-        <h2>Color System</h2>
-        <p>Based on the selection of the $brand-primary color, all variations, tints, and shades are generated through SASS functions.</p>
-        <div class="test-comp-x">
-            Component Solid
-        </div>
-        <div class="test-comp-y">
-            Component Outline
-        </div>
-        <div class="color-chart">
-            <div class="shading">
-                <h3>Shading</h3>
-                <div class="color">
-                    <div class="swatch">1</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">2</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">3</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">4</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">5</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">G</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">6</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">7</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">8</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">9</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">10</div>
-                </div>
-            </div>
-            <div class="primary">
-                <h3>Primary</h3>
-                <div class="color">
-                    <div class="swatch">1</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">2</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">3</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">4</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">5</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">P</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">6</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">7</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">8</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">9</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">10</div>
-                </div>
-            </div>
-            <div class="accent">
-                <h3>Accent <small>(Complimentary)</small></h3>
-                <div class="color">
-                    <div class="swatch">1</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">2</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">3</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">4</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">5</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">A</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">6</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">7</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">8</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">9</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">10</div>
-                </div>
-            </div>
-            <div class="secondary">
-                <h3>Secondary</h3>
-                <div class="color">
-                    <div class="swatch">1</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">2</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">3</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">4</div>
-                </div>
-
-                <div class="color">
-                    <div class="swatch">5</div>
-                </div>
-
-                <div class="color">
-                    <div class="swatch">S</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">6</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">7</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">8</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">9</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">10</div>
-                </div>
-            </div>
-            <div class="tertiary">
-                <h3>Tertiary</h3>
-                <div class="color">
-                    <div class="swatch">1</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">2</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">3</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">4</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">5</div>
-                </div>
-
-                <div class="color">
-                    <div class="swatch">T</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">6</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">7</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">8</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">9</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">10</div>
-                </div>
-            </div>
-            <div class="quarternary">
-                <h3>Quarternary</h3>
-                <div class="color">
-                    <div class="swatch">1</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">2</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">3</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">4</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">5</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">Q</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">6</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">7</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">8</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">9</div>
-                </div>
-                <div class="color">
-                    <div class="swatch">10</div>
-                </div>
-            </div>
-        </div>
-        <h3>Header Level 3</h3>
-        <p>Perspiciatis natus deserunt fugiat vel optio, reprehenderit, animi recusandae dolor placeat hic distinctio consequuntur voluptatem omnis ut earum unde excepturi.</p>
-        <ul>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
-            <li>Cum nostrum, cupiditate incidunt expedita magni facere.</li>
-            <li>Tempore veniam, repellendus aliquam voluptate! Quia, a!</li>
-            <li>Sit nemo, ipsa consectetur maiores totam amet!</li>
-            <li>Ut maiores dolores, dolorum, sunt ipsum aliquam.</li>
-            <li>Earum provident alias, excepturi ullam aperiam sapiente.</li>
-        </ul>
-        <h4>Header Level 4</h4>
-        <p>Tenetur assumenda sint deserunt cupiditate laudantium quisquam, harum. Maxime ad nisi molestias magni, minus hic quia ea laborum modi repudiandae!</p>
-        <h5>Header Level 5</h5>
-        <p>Et, cum beatae incidunt ex enim, ea tenetur omnis labore tempora dicta distinctio eum deserunt eveniet ducimus dolor vero similique?</p>
-        <h6>Header Level 6</h6>
-        <p class="small">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, facilis distinctio, tenetur maxime dolorum iusto aliquid amet repudiandae id suscipit repellendus sequi fugit nostrum ab porro nemo eius blanditiis ea, labore consequatur nobis! Dolores veniam quia, totam quidem veritatis ea voluptatum laudantium explicabo, ipsam repudiandae nemo optio. Voluptate ut ab eveniet voluptates libero nostrum amet.</p>
-        <div class="footnote">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui necessitatibus delectus, nulla quisquam? Sint fugiat voluptatum necessitatibus natus, earum accusamus totam accusantium, non, adipisci voluptas, consequuntur. Sed blanditiis voluptates sapiente praesentium, nihil sit minus, perferendis doloribus ratione officia, totam quis eaque obcaecati amet quaerat nobis officiis veritatis dignissimos rem. Ipsum impedit expedita quas alias neque.</p>
-        </div>
+        <p class="lead">A style book for the Design System</p>
+        <h2>Contents</h2>
+        <dl>
+            <dt><a href="color.html">Color</a></dt>
+            <dd>Based on the selection of the $brand-primary color, all variations, tints, and shades are generated through SASS functions.</dd>
+            <dt><a href="type.html">Typography</a></dt>
+            <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro eligendi sint nisi distinctio animi saepe inventore rem ea maxime ab?</dd>
+            <dt><a href="#.html">Layout</a></dt>
+            <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, quas. Adipisci est provident quam dolores, autem aspernatur laborum ducimus non!</dd>
+            <dt><a href="modules.html">Modules</a></dt>
+            <dd>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam consectetur ipsa excepturi harum error fugit, ducimus possimus veniam fugiat sit!</dd>
+        </dl>
     </div>
-    <script src="js/main@@if (compression === true) {@@include('compression.html')}.js"></script>
+    @@include('footer.html')
+<script src="js/main@@if (compression === true) {@@include('compression.html')}.js"></script>
 </body>
 
 </html>
